Make sure things are visible

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 65px;
+}
+
 .loginHeaderCube {
     margin-top: 15px;
 }
